--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 .navbar-brand {
-    font-size: 20px;
+    font-size: large;
     padding-top: 10px;
 }
 
@@ -32,15 +32,15 @@ main .form-control {
     width: auto;
 }
 
-#textarea {
-    width: 50%;
-    border: solid 2px orange;
-}
-
-/* form, .buttonHolder, #channel_name {
-    text-align: center;
-} */
-
 main {
     text-align: center;
+}
+
+#textarea {
+    width: 50%;
+}
+
+.list-group {
+    padding-top: 20px;
+    font-size: large;
 }
